<resources>
    <string name="app_name">Luga Luga</string>
    <string name="label">email</string>
    <string name="label2">senha</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_senha">senha</string>
    <string name="btnLogin">Login</string>
    <string name="btnEsqueci">Esquici a senha</string>
    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="logo"></string>
    <string name="tv_qtdProduto">10pc</string>
    <string name="btn_alugar">Alugar</string>
    <string name="Nome">Nome</string>
    <string name="CPF">CPF</string>
    <string name="Data">Data</string>
    <string name="CEP">CEP</string>
    <string name="Logradouro">Logradouro</string>
    <string name="Numero">Numero</string>
    <string name="Complemento">Complemento</string>
    <string name="Bairro">Bairro</string>
    <string name="Cidade">Cidade</string>
    <string name="UF">UF</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>

    <string name="input_nome_user">Nome</string>
    <string name="input_cpf_user">CPF</string>
    <string name="input_nascimento_user">Data Nascimento</string>
    <string name="input_logradouro_user">Logradouro</string>
    <string name="input_numero_user">Nº</string>
    <string name="input_complemento_user">Complemento</string>
    <string name="input_bairro_user">Bairro</string>
    <string name="input_cep_user">CEP</string>
    <string name="input_cidade_user">Cidade</string>
    <string name="input_uf_user">UF</string>
    <string name="input_email_user">e-mail</string>
    <string name="input_senha_user">senha</string>

    <string name="btn_cadastrar">Cadastrar</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="produto">Produtos</string>
    <string name="solicitacao">Solicitações</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="atendimento">Atendimento</string>
    <string name="sobre1">Luga-Luga</string>
    <string name="fale">Fale Conosco</string>

    <string name="faleC">Fale Conosco</string>

    <string name="nome">Nome</string>
    <string name="buscar">Buscar</string>

    <string name="usuarios">Usuários Cadastrados</string>

    <string name="assunto">Assunto</string>
    <string name="mensagem">Mensagem</string>
    <string name="enviar">Enviar</string>
    <string name="telefone">Telefone</string>

    <string name="sobre">Sobre-nós</string>
    <string name="tudo">Olá a todos,

É com grande entusiasmo que apresento nosso mais recente projeto de desenvolvimento de aplicativo Android. Nosso time tem trabalhado arduamente para criar uma experiência excepcional para nossos usuários, combinando inovação, funcionalidade e design intuitivo.
Com uma interface limpa e amigável, nosso aplicativo oferece uma experiência de usuário fluida e agradável. Além disso, incorporamos recursos avançados que visam otimizar a produtividade e tornar as tarefas cotidianas mais simples e eficientes.
    </string>


</resources>