<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_produtos"
            android:title="@string/produto" />

        <item
            android:id="@+id/nav_solicitacao"
            android:icon="@drawable/ic_menu_solicitacoes"
            android:title="@string/solicitacao" />
        <item
            android:id="@+id/nav_acompanhamento"
            android:icon="@drawable/ic_menu_acompanhamento"
            android:title="@string/acompanhamento" />
        <item
            android:id="@+id/nav_atendimento"
            android:icon="@drawable/ic_menu_atendimento"
            android:title="@string/atendimento" />

        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/ic_list_users"
            android:title="@string/usuarios" />


    </group>
    <item

        android:title="Mais Informações">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_sobre"
                android:title="@string/sobre" />
            <item
                android:id="@+id/nav_fale"
                android:icon="@drawable/ic_menu_fale"
                android:title="@string/fale" />


        </menu>


    </item>


</menu>