<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/nome_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/Nome"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/cpf_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CPF"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/nome_user"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:id="@+id/email_user"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cpf_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:id="@+id/telefone_user"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/email_user" />


</androidx.constraintlayout.widget.ConstraintLayout>