<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

    <TextView
        android:id="@+id/tv_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22dp"
       />
    <TextView
        android:id="@+id/tv_descProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeProduto"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

